[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/selection_menu/LevelSelection.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/RonysiswadiArchitect1-3zjeL.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/MotleyForcesRegular-w1rZ3.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/LevelDescription.tres" type="DynamicFont" id=4]
[ext_resource path="res://ui/selection_menu/selection_menu_elements/LockedLevelCover.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 18
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 42
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="LevelSelectionMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.0196078, 0.172549, 0.784314 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 20.0

[node name="Back" type="Button" parent="HBoxContainer"]
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
flat = true

[node name="Label" type="Label" parent="HBoxContainer/Back"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 150, 150 )
custom_colors/font_color = Color( 1, 0.866667, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "< Back"
align = 1
valign = 1

[node name="LevelMenu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -304.0
margin_top = -131.0
margin_right = 304.0
margin_bottom = 131.0

[node name="SelectLabel" type="Label" parent="LevelMenu"]
margin_right = 608.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
custom_fonts/font = SubResource( 2 )
text = "Select Level"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="LevelMenu"]
margin_top = 64.0
margin_right = 608.0
margin_bottom = 264.0

[node name="LevelOne" type="Button" parent="LevelMenu/HBoxContainer"]
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )

[node name="Name" type="Label" parent="LevelMenu/HBoxContainer/LevelOne"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
text = "1: The City"
align = 1
valign = 1

[node name="LevelTwo" type="Button" parent="LevelMenu/HBoxContainer"]
margin_left = 204.0
margin_right = 404.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )

[node name="Name" type="Label" parent="LevelMenu/HBoxContainer/LevelTwo"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
text = "2: The Bridge"
align = 1
valign = 1

[node name="Lock" parent="LevelMenu/HBoxContainer/LevelTwo" instance=ExtResource( 5 )]

[node name="LevelThree" type="Button" parent="LevelMenu/HBoxContainer"]
margin_left = 408.0
margin_right = 608.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )

[node name="Name" type="Label" parent="LevelMenu/HBoxContainer/LevelThree"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
text = "3: The Lair"
align = 1
valign = 1

[node name="Lock" parent="LevelMenu/HBoxContainer/LevelThree" instance=ExtResource( 5 )]

[connection signal="pressed" from="HBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="LevelMenu/HBoxContainer/LevelOne" to="." method="_on_LevelOne_pressed"]
[connection signal="pressed" from="LevelMenu/HBoxContainer/LevelTwo" to="." method="_on_LevelTwo_pressed"]
[connection signal="pressed" from="LevelMenu/HBoxContainer/LevelThree" to="." method="_on_LevelThree_pressed"]
